# TensorBoxPy3

./: .gitignore  README.md  combine_frames.py  download_data.bat  download_data.sh  download_sample_data.bat  download_sample_data.sh  evaluate.py  extract_video_frames.py  json_labeler.py  make_json.py  open_tensorboard.bat  open_tensorboard.sh  predict.py  requirements.txt  train.py  version.txt
hypes/: inception.json  inception_lstm.json  inception_rezoom.json  inception_rezoom_lstm.json  lstm.json  lstm_resnet_rezoom.json  lstm_rezoom.json  overfeat.json  overfeat_resnet_rezoom.json  overfeat_rezoom.json  resnet_rezoom.json  (+1 more)
utils/: CMakeLists.txt  Makefile  __init__.py  create_meta_graph.py  data_utils.py  googlenet_load.py  rect.py  stitch_rects.cpp  stitch_rects.hpp  stitch_wrapper.pyd  stitch_wrapper.pyx  train_utils.py
utils/annolist/: AnnoList_pb2.py  AnnotationLib.py  MatPlotter.py  PalLib.py  doRPC.py  ma_utils.py  plotSimple.py
utils/hungarian/: hungarian.cc
utils/slim_nets/: alexnet.py  alexnet_test.py  cifarnet.py  inception.py  inception_resnet_v2.py  inception_resnet_v2_test.py  inception_utils.py  inception_v1.py  inception_v1_test.py  inception_v2.py  inception_v2_test.py  inception_v3.py  inception_v3_test.py  inception_v4.py  inception_v4_test.py  lenet.py  mobilenet_v1.py  mobilenet_v1_test.py  nasnet.py  nasnet_test.py  nasnet_utils.py  nasnet_utils_test.py  nets_factory.py  nets_factory_test.py  overfeat.py  overfeat_test.py  resnet.py  resnet_utils.py  resnet_v1.py  resnet_v1_test.py  resnet_v2.py  resnet_v2_test.py  vgg.py  vgg_test.py
(+1 files in other folders)
